--- a/D.A.N.T/MavenProject/inicio/src/main/site/GamePage.html
+++ b/D.A.N.T/MavenProject/inicio/src/main/site/GamePage.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +12,6 @@
     <link rel="icon" href="content/dant3.png">
     <title>Titulo do Jogo</title>
 </head>
-
 <body>
     <header>
         <nav>
@@ -28,7 +26,9 @@
                 </div>
                 <div class="esquerda">
                     <div class="imagem">
-                        <img src="content/dant1.png" alt="" width="150px" height="50px">
+                        <a href="#">
+                            <img src="content/dant1.png" alt="" width="80%" height="100%">
+                        </a>
                     </div>
                     <div class="links">
                         <ul>
@@ -38,9 +38,11 @@
                     </div>
                 </div>
                 <div class="direita">
-                    <div class="profile">
-                        <i class="fa-solid fa-user fa-xl"></i>
-                    </div>
+                    <a href="#">
+                        <div class="profile">
+                            <i class="fa-solid fa-user fa-xl"></i>
+                        </div>
+                    </a>
                 </div>
             </div>
         </nav>
@@ -114,5 +116,4 @@
     </footer>
     <script src="js/javaGamePage.js"></script>
 </body>
-
 </html>
