--- a/D.A.N.T/MavenProject/inicio/src/main/site/HomePage.html
+++ b/D.A.N.T/MavenProject/inicio/src/main/site/HomePage.html
@@ -45,7 +45,9 @@
                 </div>
                 <div class="esquerda">
                     <div class="imagem">
-                        <img src="content/dant1.png" alt="" width="150px" height="50px">
+                        <a href="#">
+                            <img src="content/dant1.png" alt="" width="80%" height="100%">
+                        </a>
                     </div>
                     <div class="links">
                         <ul>
@@ -55,9 +57,11 @@
                     </div>
                 </div>
                 <div class="direita">
-                    <div class="profile">
-                        <i class="fa-solid fa-user fa-xl"></i>
-                    </div>
+                    <a href="#">
+                        <div class="profile">
+                            <i class="fa-solid fa-user fa-xl"></i>
+                        </div>
+                    </a>
                 </div>
             </div>
         </nav>
@@ -112,7 +116,7 @@
                 accusamus aperiam quos, ut vitae magni harum inventore temporibus at.</p>
         </div>
         <div class="selo">
-            <img src="#" alt="" width="300px" height="150px">
+            <img src="content/dant2.png" alt="" width="100%" height="100%">
         </div>
     </footer>
     <script src="js/javahome.js"></script>
