--- a/D.A.N.T/MavenProject/inicio/src/main/site/Search.html
+++ b/D.A.N.T/MavenProject/inicio/src/main/site/Search.html
@@ -26,7 +26,9 @@
                 </div>
                 <div class="esquerda">
                     <div class="imagem">
-                        <img src="content/dant1.png" alt="" width="150px" height="50px">
+                        <a href="#">
+                            <img src="content/dant1.png" alt="" width="80%" height="100%">
+                        </a>
                     </div>
                     <div class="links">
                         <ul>
@@ -36,9 +38,11 @@
                     </div>
                 </div>
                 <div class="direita">
-                    <div class="profile">
-                        <i class="fa-solid fa-user fa-xl"></i>
-                    </div>
+                    <a href="#">
+                        <div class="profile">
+                            <i class="fa-solid fa-user fa-xl"></i>
+                        </div>
+                    </a>
                 </div>
             </div>
         </nav>
@@ -103,8 +107,8 @@
         </div>
     </section>
     <footer>
-        <div class="imagem">
-            <img src="#" alt="" width="300px" height="200x">
+        <div class="imagem">    
+            <img src="content/dant1.png" alt="" width="100%" height="100%">
         </div>
         <div class="descricao">
             <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure error illo culpa corporis. Autem tenetur
@@ -115,7 +119,7 @@
                 accusamus aperiam quos, ut vitae magni harum inventore temporibus at.</p>
         </div>
         <div class="selo">
-            <img src="#" alt="" width="300px" height="150px">
+            <img src="content/dant2.png" alt="" width="100%" height="100%">
         </div>
     </footer>
     <script src="js/javaSearch.js"></script>
