mudanças chat bot

--- a/D.A.N.T/MavenProject/inicio/src/main/site/HomePage.html
+++ b/D.A.N.T/MavenProject/inicio/src/main/site/HomePage.html
@@ -20,9 +20,7 @@
         <i class="fa-solid fa-caret-up fa-2xl"></i>
         <div class="container-chat">
             <div class="resp">
-                <h5 class="insere">
-                    resposta
-                </h5>
+                <h5 class="insere"> <!-- Java --> </h5>
             </div>
             <div class="form">
                 <label>
