--- a/Codigo/MavenProject/inicio/src/main/site/Search.html
+++ b/Codigo/MavenProject/inicio/src/main/site/Search.html
@@ -13,6 +13,21 @@
     <title>Search Page</title>
 </head>
 <body>
+    <input type="checkbox" class="empilhar">
+    <chat-bot>
+        <i class="fa-solid fa-caret-up fa-2xl"></i>
+        <div class="container-chat">
+            <div class="resp">
+                <h5 class="insere"> <!-- Java --> </h5>
+            </div>
+            <div class="form">
+                <label>
+                    <input type="text" class="recebe" placeholder="digite sua pergunta...">
+                    <input type="submit" onclick="sendMessage()">
+                </label>
+            </div>
+        </div>
+    </chat-bot>
     <header>
         <nav>
             <div class="container-navegar">
@@ -38,7 +53,7 @@
                     </div>
                 </div>
                 <div class="direita">
-                    <a href="#">
+                    <a href="Perfil.html">
                         <div class="profile">
                             <i class="fa-solid fa-user fa-xl"></i>
                         </div>
