--- a/Codigo/MavenProject/inicio/src/main/site/GamePage.html
+++ b/Codigo/MavenProject/inicio/src/main/site/GamePage.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="direita">
-                    <a href="#">
+                    <a href="Perfil.html">
                         <div class="profile">
                             <i class="fa-solid fa-user fa-xl"></i>
                         </div>
@@ -94,13 +94,24 @@
                 </label>
             </div>
         </div>
+        <div class="navegador-forum">
+            <div class="button number-1">
+                <h1>Genero</h1>
+            </div>
+            <div class="button number-2">
+                <h1>Genero</h1>
+            </div>
+            <div class="button number-2">
+                <h1>Genero</h1>
+            </div>
+        </div>
         <div class="container-forum">
             <!-- Java Script puro -->
         </div>
     </section>
     <footer>
-        <div class="imagem">
-            <img src="#" alt="" width="300px" height="200x">
+        <div class="imagem">    
+            <img src="content/dant1.png" alt="" width="100%" height="100%">
         </div>
         <div class="descricao">
             <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure error illo culpa corporis. Autem tenetur
@@ -111,7 +122,7 @@
                 accusamus aperiam quos, ut vitae magni harum inventore temporibus at.</p>
         </div>
         <div class="selo">
-            <img src="#" alt="" width="300px" height="150px">
+            <img src="content/dant2.png" alt="" width="100%" height="100%">
         </div>
     </footer>
     <script src="js/javaGamePage.js"></script>
