--- a/Codigo/MavenProject/inicio/src/main/site/GamePage.html
+++ b/Codigo/MavenProject/inicio/src/main/site/GamePage.html
@@ -114,12 +114,18 @@
             <img src="content/dant1.png" alt="" width="100%" height="100%">
         </div>
         <div class="descricao">
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure error illo culpa corporis. Autem tenetur
-                tempore omnis sunt explicabo rem.</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sapiente vero debitis hic est id, nostrum,
-                asperiores tempore quos, similique dignissimos eos impedit atque voluptatem suscipit sit totam! Maxime
-                commodi dolores quod eaque perspiciatis exercitationem voluptas officiis consectetur sed soluta
-                accusamus aperiam quos, ut vitae magni harum inventore temporibus at.</p>
+            <div class="contatos">
+                <h2>Contatos</h2>
+                <ul>
+                    <Li><a href="#"><i class="fa-brands fa-facebook fa-lg">Facebook</i></a></Li>
+                    <Li><a href="#"><i class="fa-brands fa-instagram fa-lg">Instagram</i></a></Li>
+                    <Li><a href="#"><i class="fa-brands fa-whatsapp fa-lg">Whatsapp</i></a></Li>
+                </ul>
+            </div>
+            <div class="quem-somos">
+                <h2>D.A.N.T</h2>
+                <p>Na DANT, somos apaixonados por conectar jogadores com os melhores jogos. Como líderes em distribuição de jogos, trazemos o entretenimento digital mais emocionante diretamente para suas mãos. Nossa dedicação à qualidade e diversidade é o que nos torna sua escolha número um para todos os tipos de jogos, desde aventuras épicas até experiências multijogador de última geração.</p>
+            </div>
         </div>
         <div class="selo">
             <img src="content/dant2.png" alt="" width="100%" height="100%">
