--- a/Codigo/MavenProject/inicio/src/main/site/GamePage.html
+++ b/Codigo/MavenProject/inicio/src/main/site/GamePage.html
@@ -94,19 +94,21 @@
                 </label>
             </div>
         </div>
-        <div class="navegador-forum">
-            <div class="button number-1">
-                <h1>Genero</h1>
+        <div class="container-tudo-forum">
+            <div class="navegador-forum">
+                <div class="button number-1">
+                    <h1>Genero</h1>
+                </div>
+                <div class="button number-2">
+                    <h1>Genero</h1>
+                </div>
+                <div class="button number-2">
+                    <h1>Genero</h1>
+                </div>
             </div>
-            <div class="button number-2">
-                <h1>Genero</h1>
+            <div class="container-forum">
+                <!-- Java Script puro -->
             </div>
-            <div class="button number-2">
-                <h1>Genero</h1>
-            </div>
-        </div>
-        <div class="container-forum">
-            <!-- Java Script puro -->
         </div>
     </section>
     <footer>
