mexidas extremas pprt

--- a/Codigo/MavenProject/inicio/src/main/site/Perfil.html
+++ b/Codigo/MavenProject/inicio/src/main/site/Perfil.html
@@ -16,112 +16,65 @@
 
 <body>
     <header>
-        <nav>
-            <div class="container-navegar">
-                <div class="hamburguer">
-                    <i class="fa-solid fa-bars fa-xl"></i>
-                    <input type="checkbox" class="fake">
-                    <ul>
-                        <li><a href="HomePage.html">HOME PAGE</a></li>
-                        <li><a href="Search.html">SEARCH PAGE</a></li>
-                    </ul>
-                </div>
-                <div class="esquerda">
-                    <div class="imagem">
-                        <a href="#">
-                            <img src="content/dant1.png" alt="" width="80%" height="100%">
-                        </a>
-                    </div>
-                    <div class="links">
-                        <ul>
-                            <li><a href="HomePage.html">HOME PAGE</a></li>
-                            <li><a href="Search.html">SEARCH PAGE</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="direita">
-                    <a href="Perfil.html">
-                        <div class="profile">
-                            <i class="fa-solid fa-user fa-xl"></i>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </nav>
+        <!-- Java Script -->
     </header>
     <section>
         <div class="container-dados">
-            <label>
-                <div class="tudo-esq">
-                    <div class="esq">
-                        <div>
-                            <h3>Nome:</h3>
-                            <input type="text" class="nome" required>
-                        </div>
-                        <div>
-                            <h3>Email:</h3>
-                            <input type="text" class="email" required>
-                        </div>
-                        <div>
-                            <h3>Senha</h3>
-                            <input type="password" class="senha" required>
-                        </div>
-                        <div>
-                            <h3>Confirmar senha</h3>
-                            <input type="password" class="confirmar_senha" required>
-                        </div>
-                        <div>
-                            <h3>Data</h3>
-                            <input type="date" class="date" required>
-                        </div>
-                    </div>
-                    <div class="container-deletar">
-                        <div class="deletar">
-                            <h1>DELETAR</h1>
-                        </div>
-                        <div class="salvar">
-                            <h1>SALVAR</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="dir">
+
+            <div class="tudo-esq">
+                <div class="esq">
                     <div>
-                      <label for="image_uploads" class="texto">Insira uma Imagem (PNG, JPG)</label>
-                      <input
-                        type="file"
-                        id="image_uploads"
-                        name="image_uploads"
-                        accept=".jpg, .jpeg, .png"
-                        multiple />
+                        <h3>Nome:</h3>
+                        <input type="text" class="nome" required>
                     </div>
-                    <div class="preview">
+                    <div>
+                        <h3>Email:</h3>
+                        <input type="text" class="email" required>
+                    </div>
+                    <div>
+                        <h3>Senha</h3>
+                        <input type="password" class="senha" required>
+                    </div>
+                    <div>
+                        <h3>Confirmar senha</h3>
+                        <input type="password" class="confirmar_senha" required>
+                    </div>
+                    <div>
+                        <h3>Data</h3>
+                        <input type="date" class="date" required>
                     </div>
                 </div>
-            </label>
+                <div class="container-deletar">
+                    <div class="deletar">
+                        <h1>DELETAR</h1>
+                    </div>
+                    <div class="salvar">
+                        <h1>SALVAR</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="dir">
+                <div>
+                    <label for="image_uploads" class="texto">Insira uma Imagem (PNG, JPG)</label>
+                    <input type="file" id="image_uploads" name="image_uploads" accept=".jpg, .jpeg, .png" multiple />
+                </div>
+                <div class="preview">
+                </div>
+            </div>
+            <div class="certeza">
+                <h1>Realmente deseja deletar sua conta:</h1>
+                <div class="opcoes">
+                    <h3 class="sim">SIM</h3>
+                    <h3 class="nao">NAO</h3>
+                </div>
+            </div>
         </div>
     </section>
     <footer>
-        <div class="imagem">
-            <img src="content/dant1.png" alt="" width="100%" height="100%">
-        </div>
-        <div class="descricao">
-            <div class="contatos">
-                <h2>Contatos</h2>
-                <ul>
-                    <Li><a href="#"><i class="fa-brands fa-facebook fa-lg">Facebook</i></a></Li>
-                    <Li><a href="#"><i class="fa-brands fa-instagram fa-lg">Instagram</i></a></Li>
-                    <Li><a href="#"><i class="fa-brands fa-whatsapp fa-lg">Whatsapp</i></a></Li>
-                </ul>
-            </div>
-            <div class="quem-somos">
-                <h2>D.A.N.T</h2>
-                <p>Na DANT, somos apaixonados por conectar jogadores com os melhores jogos. Como líderes em distribuição de jogos, trazemos o entretenimento digital mais emocionante diretamente para suas mãos. Nossa dedicação à qualidade e diversidade é o que nos torna sua escolha número um para todos os tipos de jogos, desde aventuras épicas até experiências multijogador de última geração.</p>
-            </div>
-        </div>
-        <div class="selo">
-            <img src="content/dant2.png" alt="" width="100%" height="100%">
-        </div>
+        <!-- Java Script -->
     </footer>
     <script src="js/javaPerfil.js"></script>
+    <script src="js/all.js"></script>
 </body>
+
 </html>
