--- a/Codigo/MavenProject/inicio/src/main/site/GamePage.html
+++ b/Codigo/MavenProject/inicio/src/main/site/GamePage.html
@@ -14,38 +14,7 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div class="container-navegar">
-                <div class="hamburguer">
-                    <i class="fa-solid fa-bars fa-xl"></i>
-                    <input type="checkbox" class="fake">
-                    <ul>
-                        <li><a href="HomePage.html">HOME PAGE</a></li>
-                        <li><a href="Search.html">SEARCH PAGE</a></li>
-                    </ul>
-                </div>
-                <div class="esquerda">
-                    <div class="imagem">
-                        <a href="#">
-                            <img src="content/dant1.png" alt="" width="80%" height="100%">
-                        </a>
-                    </div>
-                    <div class="links">
-                        <ul>
-                            <li><a href="HomePage.html">HOME PAGE</a></li>
-                            <li><a href="Search.html">SEARCH PAGE</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="direita">
-                    <a href="Perfil.html">
-                        <div class="profile">
-                            <i class="fa-solid fa-user fa-xl"></i>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </nav>
+        <!-- Java Script -->
     </header>
     <section>
         <div class="forum">
@@ -97,13 +66,13 @@
         <div class="container-tudo-forum">
             <div class="navegador-forum">
                 <div class="button number-1">
-                    <h1>Genero</h1>
+                    <h1>Detonado</h1>
                 </div>
                 <div class="button number-2">
-                    <h1>Genero</h1>
+                    <h1>Avaliações</h1>
                 </div>
                 <div class="button number-2">
-                    <h1>Genero</h1>
+                    <h1>Geral</h1>
                 </div>
             </div>
             <div class="container-forum">
@@ -112,27 +81,9 @@
         </div>
     </section>
     <footer>
-        <div class="imagem">    
-            <img src="content/dant1.png" alt="" width="100%" height="100%">
-        </div>
-        <div class="descricao">
-            <div class="contatos">
-                <h2>Contatos</h2>
-                <ul>
-                    <Li><a href="#"><i class="fa-brands fa-facebook fa-lg">Facebook</i></a></Li>
-                    <Li><a href="#"><i class="fa-brands fa-instagram fa-lg">Instagram</i></a></Li>
-                    <Li><a href="#"><i class="fa-brands fa-whatsapp fa-lg">Whatsapp</i></a></Li>
-                </ul>
-            </div>
-            <div class="quem-somos">
-                <h2>D.A.N.T</h2>
-                <p>Na DANT, somos apaixonados por conectar jogadores com os melhores jogos. Como líderes em distribuição de jogos, trazemos o entretenimento digital mais emocionante diretamente para suas mãos. Nossa dedicação à qualidade e diversidade é o que nos torna sua escolha número um para todos os tipos de jogos, desde aventuras épicas até experiências multijogador de última geração.</p>
-            </div>
-        </div>
-        <div class="selo">
-            <img src="content/dant2.png" alt="" width="100%" height="100%">
-        </div>
+        <!-- Java Script -->
     </footer>
     <script src="js/javaGamePage.js"></script>
+    <script src="js/all.js"></script>
 </body>
 </html>
