--- a/Codigo/MavenProject/inicio/src/main/site/Search.html
+++ b/Codigo/MavenProject/inicio/src/main/site/Search.html
@@ -29,38 +29,7 @@
         </div>
     </chat-bot>
     <header>
-        <nav>
-            <div class="container-navegar">
-                <div class="hamburguer">
-                    <i class="fa-solid fa-bars fa-xl"></i>
-                    <input type="checkbox" class="fake">
-                    <ul>
-                        <li><a href="HomePage.html">HOME PAGE</a></li>
-                        <li><a href="Search.html">SEARCH PAGE</a></li>
-                    </ul>
-                </div>
-                <div class="esquerda">
-                    <div class="imagem">
-                        <a href="#">
-                            <img src="content/dant1.png" alt="" width="80%" height="100%">
-                        </a>
-                    </div>
-                    <div class="links">
-                        <ul>
-                            <li><a href="HomePage.html">HOME PAGE</a></li>
-                            <li><a href="Search.html">SEARCH PAGE</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="direita">
-                    <a href="Perfil.html">
-                        <div class="profile">
-                            <i class="fa-solid fa-user fa-xl"></i>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </nav>
+        <!-- Java Script -->
     </header>
     <section>
         <div class="filtragem">
@@ -118,32 +87,14 @@
             <!-- Vai estar no java -->
         </div>
         <div class="mais-itens abrir-1">
-            <h2>BLA BLA BLA</h2>
+            <h2>Mais Jogos</h2>
         </div>
     </section>
     <footer>
-        <div class="imagem">    
-            <img src="content/dant1.png" alt="" width="100%" height="100%">
-        </div>
-        <div class="descricao">
-            <div class="contatos">
-                <h2>Contatos</h2>
-                <ul>
-                    <Li><a href="#"><i class="fa-brands fa-facebook fa-lg">Facebook</i></a></Li>
-                    <Li><a href="#"><i class="fa-brands fa-instagram fa-lg">Instagram</i></a></Li>
-                    <Li><a href="#"><i class="fa-brands fa-whatsapp fa-lg">Whatsapp</i></a></Li>
-                </ul>
-            </div>
-            <div class="quem-somos">
-                <h2>D.A.N.T</h2>
-                <p>Na DANT, somos apaixonados por conectar jogadores com os melhores jogos. Como líderes em distribuição de jogos, trazemos o entretenimento digital mais emocionante diretamente para suas mãos. Nossa dedicação à qualidade e diversidade é o que nos torna sua escolha número um para todos os tipos de jogos, desde aventuras épicas até experiências multijogador de última geração.</p>
-            </div>
-        </div>
-        <div class="selo">
-            <img src="content/dant2.png" alt="" width="100%" height="100%">
-        </div>
+        <!-- Java Script -->
     </footer>
     <script src="js/javaSearch.js"></script>
+    <script src="js/all.js"></script>
 </body>
 
 </html>
