coloquei mais uns fetchs ai

--- a/Codigo/MavenProject/inicio/src/main/site/Perfil.html
+++ b/Codigo/MavenProject/inicio/src/main/site/Perfil.html
@@ -68,6 +68,13 @@
                     <h3 class="nao">NAO</h3>
                 </div>
             </div>
+            <div class="desejo_salvar">
+                <h1>Deseja alterar os dados da sua conta?</h1>
+                <div class="opcoes">
+                    <h3 class="quero">SIM</h3>
+                    <h3 class="nao_quero">NAO</h3>
+                </div>
+            </div>
         </div>
     </section>
     <footer>
