--- a/Codigo/MavenProject/inicio/src/main/site/Search.html
+++ b/Codigo/MavenProject/inicio/src/main/site/Search.html
@@ -39,14 +39,14 @@
             </div>
             <div class="filtros">
                 <div class="drop-down">
-                    <input type="text" list="parte1" placeholder="Algo">
-                    <datalist id="parte1">
-                        <option value="Chrome"></option>
-                        <option value="Firefox"></option>
-                        <option value="Internet Explorer"></option>
-                        <option value="Opera"></option>
-                        <option value="Safari"></option>
-                    </datalist>
+                    <form method="post" list="parte1" placeholder="Algo">
+                    <select id="parte1">
+                        <option value="Chrome">Chrome</option>
+                        <option value="Firefox">Firefox</option>
+                        <option value="Internet Explorer">Internet Explorer</option>
+                        <option value="Opera">Opera</option>
+                        <option value="Safari">Safari</option>
+                    </select>
                 </div>
                 <div class="drop-down">
                     <input type="text" list="parte1" placeholder="Algo">
