--- a/Codigo/MavenProject/inicio/src/main/site/GamePage.html
+++ b/Codigo/MavenProject/inicio/src/main/site/GamePage.html
@@ -28,22 +28,15 @@
                     </div>
                     <div class="imagens">
                         <div class="cima">
-                            
+                            <!-- JavaScript -->
                         </div>
                         <div class="baixo">
-                            
+                            <!-- JavaScript -->
                         </div>
                     </div>
                 </div>
                 <div class="container-dir">
-                    <div class="descricao">
-                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur, excepturi harum
-                            maxime esse illo sequi fugit consequuntur tempora! Vitae, aliquid.</h3>
-                        <h1>Algo mais</h1>
-                    </div>
-                    <div class="preco">
-                        <h5>PReco XXXXX em <span>X</span> e <span>X</span></h5>
-                    </div>
+                    <!-- java -->
                 </div>
             </div>
             <div class="container-baixo">
