agora so falta o forum

--- a/Codigo/MavenProject/inicio/src/main/site/HomePage.html
+++ b/Codigo/MavenProject/inicio/src/main/site/HomePage.html
@@ -36,10 +36,10 @@
     <section>
         <div class="container-carrosel">
             <div class="imagem-esq">
-                <!-- Parte java -->
+                <!-- Parte Java Script -->
             </div>
             <div class="imagem-dir">
-                <!-- Parte java -->
+                <!-- Parte Java Script -->
             </div>
         </div>
         </div>
@@ -49,25 +49,10 @@
             </div>
         </div>
         <div class="container-overflow">
-            <div class="carrosel" id="carrosel">
-                <div class="text" id="text">
-                    <h1>Lorem ipsum dolor sit amet.</h1>
-                </div>
-                <div class="container-jogos">
-                    <div class="seta-esq" id="seta-esq">
-                        <i class="fa-solid fa-arrow-left fa-xl"></i>
-                    </div>
-                    <div class="jogos" id="jogos">
-                        <!-- VAI VIR DO JAVA -->
-                    </div>
-                    <div class="seta-dir" id="seta-dir">
-                        <i class="fa-solid fa-arrow-right fa-xl"></i>
-                    </div>
-                </div>
-            </div>
+            <!-- Mais um JavaScript -->
         </div>
         <div class="button">
-            <h1><a href="Search.html">Search more games</a></h1>
+            <h1><a href="Search.html">Veja mais Jogos</a></h1>
         </div>
     </section>
     <footer>
