--- a/Codigo/MavenProject/inicio/src/main/site/Search.html
+++ b/Codigo/MavenProject/inicio/src/main/site/Search.html
@@ -39,44 +39,22 @@
             </div>
             <div class="filtros">
                 <div class="drop-down">
-                    <form method="post" list="parte1" placeholder="Algo">
-                    <select id="parte1">
-                        <option value="Chrome">Chrome</option>
-                        <option value="Firefox">Firefox</option>
-                        <option value="Internet Explorer">Internet Explorer</option>
-                        <option value="Opera">Opera</option>
-                        <option value="Safari">Safari</option>
+                    <select id="parte1" class="genders">
+                        <option value="Gênero">Gênero</option>
+                        <option value="Ação">Ação</option>
+                        <option value="Casual">Casual</option>
+                        <option value="Aventura">Aventura</option>
+                        <option value="Simulador">Simulador</option>
+                        <option value="RPG">RPG</option>
                     </select>
                 </div>
                 <div class="drop-down">
-                    <input type="text" list="parte1" placeholder="Algo">
-                    <datalist id="parte1">
-                        <option value="Chrome"></option>
-                        <option value="Firefox"></option>
-                        <option value="Internet Explorer"></option>
-                        <option value="Opera"></option>
-                        <option value="Safari"></option>
-                    </datalist>
-                </div>
-                <div class="drop-down">
-                    <input type="text" list="parte1" placeholder="Algo">
-                    <datalist id="parte1">
-                        <option value="Chrome"></option>
-                        <option value="Firefox"></option>
-                        <option value="Internet Explorer"></option>
-                        <option value="Opera"></option>
-                        <option value="Safari"></option>
-                    </datalist>
-                </div>
-                <div class="drop-down">
-                    <input type="text" list="parte1" placeholder="Algo">
-                    <datalist id="parte1">
-                        <option value="Chrome"></option>
-                        <option value="Firefox"></option>
-                        <option value="Internet Explorer"></option>
-                        <option value="Opera"></option>
-                        <option value="Safari"></option>
-                    </datalist>
+                    <select id="parte1">
+                        <option value="Preço">Preço</option>
+                        <option value="Baixo">Baixo</option>
+                        <option value="Medio">Medio</option>
+                        <option value="Alto">Alto</option>
+                    </select>
                 </div>
                 <div class="botao">
                     <h4>Filtrar</h4>
