leves mudanças, só falat forum

--- a/Codigo/MavenProject/inicio/src/main/site/GamePage.html
+++ b/Codigo/MavenProject/inicio/src/main/site/GamePage.html
@@ -36,12 +36,11 @@
                     </div>
                 </div>
                 <div class="container-dir">
-                    <!-- java -->
+                   <!-- JavaScript -->
                 </div>
             </div>
             <div class="container-baixo">
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt repellat atque molestiae
-                    accusantium nostrum cum iure, rerum et dolores error.</h3>
+                <!-- JavaScript -->
             </div>
         </div>
         <div class="container-seu-comentario">
