O ULTIMO CÓMITE MAX SE U****** ROMMEL PEGA NA MI**

--- a/Codigo/MavenProject/inicio/src/main/site/GamePage.html
+++ b/Codigo/MavenProject/inicio/src/main/site/GamePage.html
@@ -57,13 +57,13 @@
         </div>
         <div class="container-tudo-forum">
             <div class="navegador-forum">
-                <div class="button number-1">
+                <div class="button 1">
                     <h1>Detonado</h1>
                 </div>
-                <div class="button number-2">
+                <div class="button 2">
                     <h1>Avaliações</h1>
                 </div>
-                <div class="button number-2">
+                <div class="button 3">
                     <h1>Geral</h1>
                 </div>
             </div>
