acabou definitivo, ganhamos

--- a/Codigo/MavenProject/inicio/src/main/site/Perfil.html
+++ b/Codigo/MavenProject/inicio/src/main/site/Perfil.html
@@ -52,6 +52,9 @@
                         <h1>SALVAR</h1>
                     </div>
                 </div>
+                <div class="premium">
+                    <h1>PREMIUM</h1>
+                </div>
             </div>
             <div class="dir">
                 <div>
@@ -75,13 +78,20 @@
                     <h3 class="nao_quero">NAO</h3>
                 </div>
             </div>
+            <div class="assinar_premium">
+                <h1>Assinar o Premium?</h1>
+                <div class="opcoes">
+                    <h3 class="desejo">SIM</h3>
+                    <h3 class="nao_desejo">NAO</h3>
+                </div>
+            </div>
         </div>
     </section>
     <footer>
         <!-- Java Script -->
     </footer>
-    <script src="js/javaPerfil.js"></script>
     <script src="js/all.js"></script>
+    <script src="js/javaPerfil.js"></script>
 </body>
 
 </html>
